Several Style fixes. --> see more on description
* Add overflow ellipsis (...) when title of aritcle is too long (TOP ARTICLES)
* Set On Change detection and Off ViewEncapsulation
*  Put dots on picture when on mobile

--- a/apps/havana500-webclient/src/app/features/home/dummy/outstanding-general-articles/outstanding-general-articles.component.scss
+++ b/apps/havana500-webclient/src/app/features/home/dummy/outstanding-general-articles/outstanding-general-articles.component.scss
@@ -1,9 +1,18 @@
 @import '../../../../core/scss/ant.scss';
 
 .top-articles {
+  position: relative;
   min-height: 54rem;
   @include media-breakpoint('xs') {
     min-height: 44rem;
+  }
+
+  .article-summary-title {
+    font-size: 1.8em;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    width: -webkit-fill-available;
   }
 
   // max-height: 54rem;
